hphp/test/zend/bad/ext-standard-serialize/serialization_objects_006.php
<?php
/* Prototype  : proto string serialize(mixed variable)
 * Description: Returns a string representation of variable (which can later be unserialized) 
 * Source code: ext/standard/var.c
 * Alias to functions: 
 */
/* Prototype  : proto mixed unserialize(string variable_representation)
 * Description: Takes a string representation of variable and recreates it 
 * Source code: ext/standard/var.c
 * Alias to functions: 
 */

$a = new __PHP_Incomplete_Class;
var_dump($a);
var_dump($a->p);

echo "Done";
?>